# sigzone-firmware

./: .clang-format  .clangd  .gitignore  README.md  west.yml
.github/workflows/: test.yml
app/: CMakeLists.txt  Kconfig  prj.conf  testcase.yaml
app/nonsecure/: main.c
app/nonsecure/bitcoin/include/bitcoin/: bitcoin_client.h  chains.h  psbt.h  psbt_result.h  psbt_signer.h  psbt_tx.h  psbt_validator.h  segwit_addr.h
app/nonsecure/bitcoin/src/: bitcoin_client.c  chains.c  psbt.c  psbt_compactsize.c  psbt_compactsize.h  psbt_heap.c  psbt_heap.h  psbt_signer.c  psbt_tx.c  psbt_validator.c  segwit_addr.c
app/nonsecure/bitcoin/tests/include/bitcoin/: nonsecure_bitcoin_test.h
app/nonsecure/bitcoin/tests/src/: chains_test.c  chains_test.h  nonsecure_bitcoin_test.c  psbt_test.c  psbt_test.h
app/nonsecure/ui/src/: bitcoin_shell.c
app/pytest/: test_bitcoin.py
app/secure/: CMakeLists.txt  bitcoin_service.c  tfm_bitcoin_partition.yaml  tfm_manifest_list.yaml.in
app/secure/bitcoin/: CMakeLists.txt
app/secure/bitcoin/cmake/: bip39_wordlist.c.in  bip39_wordlist.cmake  bip39_wordlist.h.in  secp256k1-config.cmake
app/secure/bitcoin/include/bitcoin/: bitcoin_core.h
app/secure/bitcoin/src/: base58.c  base58.h  bip32.c  bip32.h  bip39.c  bip39.h  bitcoin_core.c  key_storage.c  key_storage.h  nv_counter.c  nv_counter.h  secp256k1_context.c  secp256k1_context.h  utils.c  utils.h
app/secure/bitcoin/src/arpa/: inet.h
app/secure/bitcoin/tests/include/bitcoin/: secure_bitcoin_test.h
app/secure/bitcoin/tests/src/: bip32_test.c  bip32_test.h  bip32_test_vectors.c  bip32_test_vectors.h  bip39_test.c  bip39_test.h  bip39_test_vectors.c  bip39_test_vectors.h  bip39_test_vectors.py  key_storage_test.c  key_storage_test.h  secure_bitcoin_test.c
app/secure/configs/: config_mbedtls.h
app/shared/include/shared/: bitcoin_service_defs.h  hash.h  test_util.h
app/shared/src/: hash.c  test_util.c
app/shared/tests/include/shared/: shared_test.h
app/shared/tests/src/: hash_test.c  hash_test.h  shared_test.c
scripts/: west-commands.yml  west_commands.py
